--- a/src/components/Landing/Styles/MainImage.css
+++ b/src/components/Landing/Styles/MainImage.css
@@ -21,23 +21,11 @@
   left: 50%;
   transform: translateX(-50%);
   text-align: center;
+  text-shadow: 2px 2px 4px rgba(130, 0, 0, 0.82);
 }
 
-@media (min-width: 769px) {
-  .overlay {
-    min-width: 600px;
-  }
-}
-
-@media (max-width: 768px) {
-  .overlay {
-    top: 0px;
-    left: 0px;
-    transform: none;
-    height: 100%;
-    width: 100%;
-    border-radius: 0;
-  }
+.searchform {
+  text-shadow: none;
 }
 
 .date-picker {
@@ -63,13 +51,6 @@
   font-weight: bold;
   font-size: 30px;
   color: #ffffff;
-  text-shadow: 2px 2px 4px rgba(130, 0, 0, 0.82);
-}
-
-@media (max-width: 600px) {
-  .overlay .fw-bold {
-    font-size: 1.5rem;
-  }
 }
 
 /* spinner and suspense */
@@ -86,4 +67,35 @@
   color: #ff6961;
   border: 2px solid #ff6961;
   font-weight: 500;
+}
+
+@media (max-width: 600px) {
+  .overlay .fw-bold {
+    font-size: 1.5rem;
+  }
+}
+
+@media (max-width: 768px) {
+  .main-image-container {
+    overflow: visible;
+  }
+
+  .overlay {
+    background-color: #555;
+    transform: none;
+    width: 100%;
+    border-radius: 0;
+    position: static;
+    text-shadow: none;
+  }
+
+  .main-image {
+    display: none;
+  }
+}
+
+@media (min-width: 769px) {
+  .overlay {
+    min-width: 600px;
+  }
 }
